--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -24,6 +24,9 @@ $red: #ec2a2b;
 $orange: #FF5C34;
 $gray: #BABABD;
 
+$positive: #87d068;
+$negative: #f50;
+
 $orange-btn-h: #e54420;
 $blue-44a-btn-h: #3796d6;
 $blue-165-btn-h: #3796d6;
