Updated user module

--- a/styles/dark-mode.scss
+++ b/styles/dark-mode.scss
@@ -5,7 +5,7 @@
     background-color: $black;
   }
   .ant-layout {
-    background-color: $gray-222;
+    background-color: $gray-1b1;
   }
 
   .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled) {
