--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -14,6 +14,7 @@ $gray-333: #333;
 $gray-222: #222;
 $gray-26: #263238;
 $gray-1d: #1d212c;
+$gray-1b1: #1b1f21;
 $green-border: #eeff41;
 $green-excel: #4aaa4e;
 $green-excel-hover: #2f7930;
