--- a/styles/pages/login.scss
+++ b/styles/pages/login.scss
@@ -10,4 +10,21 @@
       max-width: 300px;
     }
   }
+
+  .login-form {
+    position: relative;
+    z-index: 10;
+  }
+
+  .intro-video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: .1;
+    z-index: 0;
+  }
 }
