Added validation on Inversion amount

--- a/styles/antd.scss
+++ b/styles/antd.scss
@@ -14044,6 +14044,7 @@ textarea.ant-time-picker-input {
   background-color: #fff;
   background-clip: padding-box;
   border: 0;
+  overflow: auto;
 }
 .ant-drawer-close {
   position: absolute;
