--- a/styles/antd-dark.scss
+++ b/styles/antd-dark.scss
@@ -7025,6 +7025,7 @@ li.ant-calendar-time-picker-select-option-disabled:hover {
   background-color: #23232e;
   background-clip: padding-box;
   border: 0;
+  overflow: auto;
 }
 .ant-drawer-close {
   position: absolute;
