look and feel changes

--- a/styles/antd-dark.scss
+++ b/styles/antd-dark.scss
@@ -7349,7 +7349,7 @@ li.ant-calendar-time-picker-select-option-disabled:hover {
   text-align: center;
 }
 .ant-empty-image {
-  height: 100px;
+  //height: 100px;
   margin-bottom: 8px;
 }
 .ant-empty-image img {
@@ -16435,7 +16435,7 @@ span.ant-radio + * {
 }
 .ant-statistic-title {
   margin-bottom: 4px;
-  color: rgba(255, 255, 255, 0.45);
+  color: rgba(255, 255, 255, 1);
   font-size: 14px;
 }
 .ant-statistic-content {
