--- a/styles/dark-mode.scss
+++ b/styles/dark-mode.scss
@@ -6,7 +6,7 @@
   }
 
   &.ant-layout {
-    background-color: $gray-1b1;
+    background-color: $gray-0e0;
 
     @media screen and (min-width: $lg) {
 
