--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -15,6 +15,7 @@ $gray-222: #222;
 $gray-26: #263238;
 $gray-1d: #1d212c;
 $gray-1b1: #1b1f21;
+$gray-0e0: #0E0E0E;
 $green-border: #eeff41;
 $green-excel: #4aaa4e;
 $green-excel-hover: #2f7930;
@@ -22,12 +23,20 @@ $white: #fff;
 $black: #000;
 $red: #ec2a2b;
 
-$orange: #FF5C34;
+
+$green: #046d11;
+$red: #96271c;
+$yellow: #e29524;
+$orange: #ff5d0a;
+$blue: #4b6da0;
+$purple: #8e4bb3;
+
 $gray: #BABABD;
 
-$positive: #87d068;
-$negative: #f50;
+$positive: #039B01;
+$negative: #D63930;
 $stock: #fdb310;
+
 
 $orange-btn-h: #e54420;
 $blue-44a-btn-h: #3796d6;
