--- a/styles/header.scss
+++ b/styles/header.scss
@@ -79,6 +79,11 @@
     padding-top: 5px;
     height: 40px;
     cursor: pointer;
+    display: none;
+    
+    @media screen and (max-width: 800px) {
+      display: inline-block;
+    }
   }
 }
 
