--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -11,6 +11,7 @@ $gray-secondary: #90a4ae;
 $gray-ddd: #ddd;
 $gray-414: #414141;
 $gray-333: #333;
+$gray-232: #23232e;
 $gray-222: #222;
 $gray-26: #263238;
 $gray-1d: #1d212c;
