--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -22,11 +22,11 @@ $green-excel: #4aaa4e;
 $green-excel-hover: #2f7930;
 $white: #fff;
 $black: #000;
-$red: #ec2a2b;
+
 
 
 $green: #046d11;
-$red: #96271c;
+$red: #ba382a;
 $yellow: #e29524;
 $orange: #ff5d0a;
 $blue: #4b6da0;
