--- a/styles/pages/operations.scss
+++ b/styles/pages/operations.scss
@@ -1,3 +1,10 @@
 #userOperations-page {
 
 }
+
+.multiple-actualization-module {
+  margin: 20px 0;
+  background: #2D2C3B;
+  padding: 15px;
+  border-radius: 4px;
+}
