--- a/styles/dark-mode.scss
+++ b/styles/dark-mode.scss
@@ -56,4 +56,9 @@
   background-color: $red;
   border-color: $red;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12);
-  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045); }
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
+}
+
+.ant-steps-item-finish .ant-steps-item-icon {
+  border-color: $positive;
+}
