--- a/styles/general.scss
+++ b/styles/general.scss
@@ -18,6 +18,18 @@ strong {
   font-weight:700;
 }
 
+.m-r-20 {
+  margin-right: 20px;
+}
+
+.m-t-20 {
+  margin-top: 20px;
+}
+
+.no-visible {
+  visibility: hidden;
+}
+
 .page-loader {
   width: 300px;
   height: 300px;
