Updates on market table header

--- a/styles/pages/operations.scss
+++ b/styles/pages/operations.scss
@@ -3,7 +3,7 @@
 }
 
 .multiple-actualization-module {
-  margin: 20px 0;
+  margin: 20px 0 0;
   background: #2D2C3B;
   padding: 15px;
   border-radius: 4px;
