--- a/common/email/templates/new-referral.ejs
+++ b/common/email/templates/new-referral.ejs
@@ -2,7 +2,7 @@
     <div style="text-align: center; color: #fff; font-weight: bold; background: #000">
         <img style="display: block; margin: 15px auto; width: 340px; height: auto"
              src="https://www.tradinguserplatform.com/static/logo_web_trader.png" alt="Web Trader">
-        <h1>Referral Ticket</h1>
+        <h1>Referral Ticket No.<%= ticketId %></h1>
         <h3><%= username %></h3>
     </div>
     <div>
