--- a/common/email/templates/new-referral.ejs
+++ b/common/email/templates/new-referral.ejs
@@ -1,5 +1,5 @@
-<div style="width: 90%;">
-    <div style="text-align: center; color: #fff; font-weight: bold; background: #000">
+<div style="width: 100%;">
+    <div style="text-align: center; color: #fff; font-weight: bold; background: #000; padding: 20px; margin-bottom: 50px">
         <img style="display: block; margin: 15px auto; width: 340px; height: auto"
              src="https://www.tradinguserplatform.com/static/logo_web_trader.png" alt="Web Trader">
         <h1>Referral Ticket No.<%= ticketId %></h1>
