Added lang selector module

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -129,3 +129,11 @@
     }
   }
 }
+
+.lang-menu {
+  .ant-select-selection {
+    background: transparent;
+    border: 0;
+    box-shadow: none!important;
+  }
+}
