--- a/styles/general.scss
+++ b/styles/general.scss
@@ -398,7 +398,7 @@ body > div:first-of-type:not(#__next) {
   cursor:move;
 }
 
-.referral-modal {
+.flexible-modal-wrapper {
   .ant-modal > .ant-modal-content {
     background: none;
     padding:0;
