Added PDF report

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -56,6 +56,7 @@
         display: none;
         max-width: 100%;
       }
+
       @media screen and (min-width: $lg) {
         &.mobile {
           display: none;
@@ -66,9 +67,14 @@
       }
     }
 
-    @media screen and (min-width: $lg) {
-      width: 235px;
+    @media screen and (min-width: $md) {
+      width: 190px;
       padding: 6px 0;
+    }
+
+    @media screen and (min-width: $xl) {
+      width: 235px;
+
     }
   }
 }
