work in progress

--- a/styles/general.scss
+++ b/styles/general.scss
@@ -435,3 +435,7 @@ body > div:first-of-type:not(#__next) {
 .iframe-page .ant-layout{
   background: #0E0E0E;
 }
+
+.overlay-modal {
+  background: rgba(0,0,0,0.5);
+}
