--- a/styles/general.scss
+++ b/styles/general.scss
@@ -436,6 +436,16 @@ body > div:first-of-type:not(#__next) {
   background: #0E0E0E;
 }
 
-.overlay-modal {
-  background: rgba(0,0,0,0.5);
+.overlay-modal:before {
+  content: "";
+  background: rgba(0,0,0,0.9);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.t-a-j {
+  text-align: justify;
 }
